unit testing of ReportingService vol.01