@@ -5,21 +5,10 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'bg.softuni'
-version = '0.0.1-SNAPSHOT'
-
 java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
-    }
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
 }
-
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
-}
-
 repositories {
     mavenCentral()
 }
@@ -32,10 +21,19 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.projectlombok:lombok:1.18.32'
     implementation  'com.mysql:mysql-connector-j'
-    annotationProcessor 'org.projectlombok:lombok:1.18.32'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.mockito:mockito-core:5.11.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
+    testImplementation("com.h2database:h2:2.3.232")
+
+    annotationProcessor 'org.projectlombok:lombok:1.18.32'
+    testImplementation 'org.projectlombok:lombok:1.18.32'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
 }
 
 tasks.named('test') {
-    useJUnitPlatform()
+    useJUnitPlatform();
+    jvmArgs '-XX:+EnableDynamicAgentLoading'
 }
